--- a/docs/0-overview/0-0_introduction.stories.mdx
+++ b/docs/0-overview/0-0_introduction.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import LinkTo from '@storybook/addon-links/react';
 
-<Meta title="Getting Started" />
+<Meta title="Overview/Introduction" />
 
 # React Facebook Login
 
