fix: 🐛 fix docs/0-overview/0-0_introduction.stories.mdx Typo

--- a/docs/0-overview/0-0_introduction.stories.mdx
+++ b/docs/0-overview/0-0_introduction.stories.mdx
@@ -86,7 +86,7 @@ import FacebookLogin from '@greatsumini/react-facebook-login';
     console.log('Get Profile Success!', response);
   }}
   render={({ onClick, logout }) => (
-    <CustonComponent onClick={onClick} onLogoutClick={logout} />
+    <CustomComponent onClick={onClick} onLogoutClick={logout} />
   )}
 />
 ```
